# kyc-onchain-v0

./: README.md  canister_ids.json
src/backend/: Cargo.toml
src/backend/src/: lib.rs  onnx.rs
src/declarations/backend/: backend.did
src/frontend/assets/: styles.css
src/frontend/src/: index.html  index.js
